manifests/control/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flui-system
  labels:
    name: flui-system
    managed-by: "flui-cloud"
    flui.cloud/tier: "platform"
    flui.cloud/managed: "true"
    flui.cloud/scope: "system"
    flui.cloud/app-kind: "SYSTEM"
    flui.cloud/owner-kind: "platform"
    flui.cloud/owner-id: "flui-core"
---
apiVersion: v1
kind: Namespace
metadata:
  name: flui-control
  labels:
    name: flui-control
    managed-by: "flui-cloud"
    flui.cloud/tier: "observability"
    flui.cloud/managed: "true"
    flui.cloud/scope: "system"
    flui.cloud/app-kind: "SYSTEM"
    flui.cloud/owner-kind: "platform"
    flui.cloud/owner-id: "flui-core"
---
apiVersion: v1
kind: Namespace
metadata:
  name: build-agents
  labels:
    name: build-agents
    managed-by: "flui-cloud"
    flui.cloud/tier: "ci"
    flui.cloud/managed: "true"
    flui.cloud/scope: "system"
    flui.cloud/app-kind: "SYSTEM"
    flui.cloud/owner-kind: "platform"
    flui.cloud/owner-id: "flui-core"
